--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,12 @@
 micronaut:
   application:
     name: mnFirebaseTenantProviders
+---
+logger:
+  levels:
+    mn.firebase: DEBUG
+---
+gcp:
+  project-id: 'your-project-id'
+  credentials:
+    location: /path/to/your/credentials.json
