Adding google provider auth flow

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,14 @@
 micronaut:
+  server:
+    port: 5000
   application:
     name: mnFirebaseTenantProviders
+  router:
+    static-resources:
+      main:
+        paths: classpath:views
+        mapping: /**
+        enabled: true
 ---
 logger:
   levels:
